--- a/_posts/2021-04-24-18video.md
+++ b/_posts/2021-04-24-18video.md
@@ -7,20 +7,16 @@ tags: 媒体
 
 <!--more-->
 
-<script src="https://cdn.jsdelivr.net/npm/hls.js"></script>
-<video id="video" preload muted loop autoplay style="height: 100%;width: 100%;object-fit: cover;">
-</video>
-<script>
-  var video = document.getElementById('video');
-  var videoSrc = 'https://cdn.jsdelivr.net/gh/Techy-Wu/videos/18/playlist.m3u8';
-  if (Hls.isSupported()) {
-    var hls = new Hls();
-    hls.loadSource(videoSrc);
-    hls.attachMedia(video);
-    hls.on(Hls.Events.MANIFEST_PARSED, function() {
-      video.play();
-    });
-  }
+<script type="text/javascript" src="ckplayer/ckplayer.js" charset="utf-8" data-name="ckplayer"></script>
+<div class="video" style="width: 100%;height: 100%;">播放器容器</div>
+<script type="text/javascript">
+    //定义一个变量：videoObject，用来做为视频初始化配置
+    var videoObject = {
+        container: '.video', //“#”代表容器的ID，“.”或“”代表容器的class
+        variable: 'player', //播放函数名称，该属性必需设置，值等于下面的new ckplayer()的对象
+        video: 'https://cdn.jsdelivr.net/gh/Techy-Wu/videos/18/playlist.m3u8'//视频地址
+    };
+    var player = new ckplayer(videoObject);//初始化播放器
 </script>
 
 
