--- a/_posts/2021-04-24-18video.md
+++ b/_posts/2021-04-24-18video.md
@@ -26,5 +26,5 @@ tags: 媒体
 
 视频文件较大，请耐心等待
 
-查看涉及的图片请转到 [成人礼图片展览](http://133can.techywu.top/2021/04/10/18pic.html)
+查看涉及的图片请转到 [成人礼图片展览](http://133can.techywu.top/2021/11/22/18pic-copy.html)
 
