--- a/_posts/2021-11-22-18pic copy.md
+++ b/_posts/2021-11-22-18pic copy.md
@@ -231,4 +231,4 @@ tags: 媒体
 
 以上均为预览图链接，点击即可访问原图详情页面
 
-图片现托管于[pic.techywu.top](https://pic.techywu.top)
+图片现托管于[pic.techywu.top](https://pic.techywu.top)的[成人礼 相册](https://pic.techywu.top/album/meH)
